created first version of measurement properties GUI, added class MProperties for saving meta data from measurement properties GUI

--- a/Biodex Client/Biodex Client/Biodex Client.csproj
+++ b/Biodex Client/Biodex Client/Biodex Client.csproj
@@ -180,6 +180,7 @@
     <Compile Include="Microcontroller_Status.Designer.cs">
       <DependentUpon>Microcontroller_Status.cs</DependentUpon>
     </Compile>
+    <Compile Include="MProperties.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Biodex_Client.resx">
