Updated Measurement Properties GUI with ELGA Data Controls, added Patient data simulator,added PatientData class

--- a/Biodex Client/Biodex Client/Biodex Client.csproj
+++ b/Biodex Client/Biodex Client/Biodex Client.csproj
@@ -181,6 +181,7 @@
       <DependentUpon>Microcontroller_Status.cs</DependentUpon>
     </Compile>
     <Compile Include="MProperties.cs" />
+    <Compile Include="PatientData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Biodex_Client.resx">
