--- a/Biodex Client/Biodex Client/Biodex Client.csproj
+++ b/Biodex Client/Biodex Client/Biodex Client.csproj
@@ -184,7 +184,7 @@
     <Compile Include="PatientData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Settings.cs" />
+    <Compile Include="SerialPortSave.cs" />
     <EmbeddedResource Include="Biodex_Client.resx">
       <DependentUpon>Biodex_Client.cs</DependentUpon>
     </EmbeddedResource>
