Neue DB Klassen Uses, ExerciseData erstellt, BiodexReport.cs Props entfernt

--- a/Biodex Client/Biodex Client/Biodex Client.csproj
+++ b/Biodex Client/Biodex Client/Biodex Client.csproj
@@ -207,14 +207,16 @@
     <Compile Include="Data.cs" />
     <Compile Include="DataAccessObject.cs" />
     <Compile Include="DB Classes\BiodexReport.cs" />
-    <Compile Include="DB Classes\elgaReport.cs" />
-    <Compile Include="DB Classes\givesInformation.cs" />
-    <Compile Include="DB Classes\mayContain.cs" />
-    <Compile Include="DB Classes\medicalData.cs" />
-    <Compile Include="DB Classes\personalData.cs" />
+    <Compile Include="DB Classes\ElgaReport.cs" />
+    <Compile Include="DB Classes\ExerciseData.cs" />
+    <Compile Include="DB Classes\GivesInformation.cs" />
+    <Compile Include="DB Classes\MayContain.cs" />
+    <Compile Include="DB Classes\MedicalData.cs" />
+    <Compile Include="DB Classes\PersonalData.cs" />
     <Compile Include="DB Classes\Proband.cs" />
     <Compile Include="DB Classes\ReportResult.cs" />
     <Compile Include="DB Classes\Settings.cs" />
+    <Compile Include="DB Classes\Uses.cs" />
     <Compile Include="Graphs.cs">
       <SubType>Form</SubType>
     </Compile>
