--- a/Biodex Client/Biodex Client/packages.config
+++ b/Biodex Client/Biodex Client/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Bunifu.UI.WinForms" version="4.1.1" targetFramework="net461" />
+  <package id="CsvHelper" version="19.0.0" targetFramework="net461" />
   <package id="LiveCharts" version="0.9.7" targetFramework="net461" />
   <package id="LiveCharts.WinForms" version="0.9.7.1" targetFramework="net461" />
   <package id="LiveCharts.Wpf" version="0.9.7" targetFramework="net461" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net461" />
+  <package id="Microsoft.CSharp" version="4.5.0" targetFramework="net461" />
   <package id="Npgsql" version="5.0.0" targetFramework="net461" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net461" />
   <package id="System.Memory" version="4.5.4" targetFramework="net461" />
